--- a/package.json
+++ b/package.json
@@ -18,16 +18,19 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
+    "@stripe/stripe-react-native": "~0.35.1",
     "axios": "^1.6.7",
     "eslint-plugin-react": "^7.33.2",
     "expo": "~50.0.4",
     "expo-auth-session": "~5.4.0",
     "expo-crypto": "~12.8.0",
+    "expo-firebase-core": "^6.0.0",
     "expo-firebase-recaptcha": "^2.3.1",
     "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "~12.7.1",
     "expo-location": "~16.5.2",
     "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.11",
     "expo-web-browser": "~12.8.2",
     "firebase": "^10.8.0",
     "i18next": "^23.8.2",
@@ -41,8 +44,10 @@
     "react-native-image-picker": "^7.1.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-localize": "^3.0.6",
+    "react-native-map-clustering": "^3.4.2",
     "react-native-maps": "^1.10.1",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-picker-select": "^9.0.1",
     "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-web": "~0.19.6",
