--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@expo-google-fonts/open-sans": "^0.2.3",
     "@expo/metro-runtime": "~3.1.1",
+    "@microsoft/signalr": "^8.0.0",
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.6.1",
@@ -23,6 +25,7 @@
     "eslint-plugin-react": "^7.33.2",
     "expo": "~50.0.4",
     "expo-auth-session": "~5.4.0",
+    "expo-checkbox": "~2.7.0",
     "expo-crypto": "~12.8.0",
     "expo-firebase-core": "^6.0.0",
     "expo-firebase-recaptcha": "^2.3.1",
@@ -40,7 +43,7 @@
     "react-native": "0.73.2",
     "react-native-datepicker": "^1.7.2",
     "react-native-geolocation-service": "^5.3.1",
-    "react-native-gesture-handler": "^2.15.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-image-picker": "^7.1.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-localize": "^3.0.6",
@@ -50,6 +53,7 @@
     "react-native-picker-select": "^9.0.1",
     "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "^4.9.0",
+    "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.6.4"
   },
@@ -58,6 +62,7 @@
     "@types/firebase": "^3.2.1",
     "@types/react": "~18.2.45",
     "@types/react-native-datepicker": "^1.7.6",
+    "@types/react-native-vector-icons": "^6.4.18",
     "prettier": "3.2.5",
     "typescript": "^5.1.3"
   },
