--- a/app.json
+++ b/app.json
@@ -20,9 +20,7 @@
         }
       ]
     ],
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.andreihp.places",
@@ -36,9 +34,7 @@
         "backgroundColor": "#ffffff"
       },
       "package": "com.andreihp.places",
-      "permissions": [
-        "android.permission.RECORD_AUDIO"
-      ],
+      "permissions": ["android.permission.RECORD_AUDIO"],
       "runtimeVersion": "1.0.0"
     },
     "web": {
