--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "dependencies": {
     "@expo-google-fonts/open-sans": "^0.2.3",
-    "@expo/metro-runtime": "~3.1.1",
+    "@expo/metro-runtime": "~3.1.3",
     "@microsoft/signalr": "^8.0.0",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/checkbox": "^0.5.17",
-    "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-native-community/datetimepicker": "7.6.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.1.9",
@@ -24,13 +24,13 @@
     "@stripe/stripe-react-native": "~0.35.1",
     "axios": "^1.6.7",
     "eslint-plugin-react": "^7.33.2",
-    "expo": "~50.0.4",
+    "expo": "~50.0.8",
     "expo-auth-session": "~5.4.0",
     "expo-checkbox": "~2.7.0",
-    "expo-crypto": "~12.8.0",
+    "expo-crypto": "~12.8.1",
     "expo-image-picker": "~14.7.1",
-    "expo-linear-gradient": "~12.7.1",
-    "expo-location": "~16.5.2",
+    "expo-linear-gradient": "~12.7.2",
+    "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
     "expo-updates": "~0.24.11",
     "expo-web-browser": "~12.8.2",
@@ -39,7 +39,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^14.0.1",
-    "react-native": "0.73.2",
+    "react-native": "0.73.4",
     "react-native-datepicker": "^1.7.2",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.14.0",
@@ -47,11 +47,11 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-localize": "^3.0.6",
     "react-native-map-clustering": "^3.4.2",
-    "react-native-maps": "^1.10.1",
+    "react-native-maps": "1.10.0",
     "react-native-maps-directions": "^1.9.0",
     "react-native-picker-select": "^9.0.1",
     "react-native-reanimated": "^3.6.2",
-    "react-native-safe-area-context": "^4.9.0",
+    "react-native-safe-area-context": "4.8.2",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.6.4"
