--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@stripe/stripe-react-native": "~0.35.1",
     "axios": "^1.6.7",
     "eslint-plugin-react": "^7.33.2",
-    "expo": "~50.0.8",
+    "expo": "~50.0.11",
     "expo-auth-session": "~5.4.0",
     "expo-checkbox": "~2.7.0",
     "expo-crypto": "~12.8.1",
@@ -50,8 +50,10 @@
     "react-native-maps": "1.10.0",
     "react-native-maps-directions": "^1.9.0",
     "react-native-picker-select": "^9.0.1",
-    "react-native-reanimated": "^3.6.2",
-    "react-native-safe-area-context": "4.8.2",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^3.29.0",
+    "react-native-svg": "^15.1.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.6.4"
