--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-image-picker": "^7.1.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-localize": "^3.0.6",
@@ -56,7 +57,8 @@
     "react-native-svg": "^15.1.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "13.6.4"
+    "react-native-webview": "13.6.4",
+    "expo-notifications": "~0.27.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
