--- a/app.json
+++ b/app.json
@@ -29,7 +29,6 @@
       }
     },
     "android": {
-      "softwareKeyboardLayoutMode": "pan",
       "adaptiveIcon": {
         "foregroundImage": "./assets/logo.jpg",
         "backgroundColor": "#ffffff"
@@ -37,7 +36,12 @@
       "package": "com.andreihp.places",
       "permissions": [
         "android.permission.RECORD_AUDIO",
-        "android.permission.DETECT_SCREEN_CAPTURE"
+        "android.permission.DETECT_SCREEN_CAPTURE",
+
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.INTERNET",
+        "android.permission.ACCESS_NETWORK_STATE"
       ],
       "runtimeVersion": "1.0.0"
     },
