--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@expo-google-fonts/open-sans": "^0.2.3",
-    "@expo/metro-runtime": "~3.1.3",
+    "@expo/metro-runtime": "~3.2.1",
     "@microsoft/signalr": "^8.0.0",
     "@mui/material": "^5.15.13",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
-    "@react-native-community/datetimepicker": "7.7.0",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "^6.1.9",
@@ -32,29 +32,32 @@
     "axios": "^1.6.7",
     "date-fns": "^3.6.0",
     "eslint-plugin-react": "^7.33.2",
-    "expo": "^51.0.1",
+    "expo": "~51.0.17",
     "expo-auth-session": "~5.5.2",
     "expo-barcode-scanner": "~13.0.1",
     "expo-brightness": "~12.0.1",
-    "expo-camera": "~15.0.5",
+    "expo-camera": "~15.0.12",
     "expo-checkbox": "~3.0.0",
-    "expo-constants": "~16.0.1",
+    "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
     "expo-device": "~6.0.2",
-    "expo-image-picker": "~15.0.4",
+    "expo-firebase-core": "^6.0.0",
+    "expo-firebase-recaptcha": "^2.3.1",
+    "expo-image-picker": "~15.0.6",
     "expo-linear-gradient": "~13.0.2",
     "expo-location": "~17.0.1",
-    "expo-notifications": "~0.28.1",
+    "expo-notifications": "~0.28.9",
     "expo-status-bar": "~1.12.1",
-    "expo-updates": "~0.25.10",
+    "expo-updates": "~0.25.18",
     "expo-web-browser": "~13.0.3",
-    "firebase": "^10.8.1",
+    "firebase": "^10.12.2",
     "i18next": "^23.8.2",
     "moment": "^2.30.1",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^14.0.1",
-    "react-native": "0.74.1",
+    "react-native": "0.74.2",
     "react-native-datepicker": "^1.7.2",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.16.1",
@@ -65,9 +68,10 @@
     "react-native-map-clustering": "^3.4.2",
     "react-native-maps": "1.14.0",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-modal-dropdown": "^1.0.2",
     "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.0.1",
-    "react-native-reanimated": "3.10.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screen-brightness": "^2.0.0-alpha",
     "react-native-screens": "3.31.1",
@@ -83,6 +87,7 @@
     "@types/firebase": "^3.2.1",
     "@types/react": "~18.2.79",
     "@types/react-native-datepicker": "^1.7.6",
+    "@types/react-native-modal-dropdown": "^1.0.5",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/text-to-svg": "^3.1.4",
     "prettier": "3.2.5",
