--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^20.1.0",
+    "@react-native-firebase/auth": "^20.1.0",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
@@ -32,32 +34,33 @@
     "axios": "^1.6.7",
     "date-fns": "^3.6.0",
     "eslint-plugin-react": "^7.33.2",
-    "expo": "~51.0.17",
+    "expo": "~51.0.21",
     "expo-auth-session": "~5.5.2",
     "expo-barcode-scanner": "~13.0.1",
     "expo-brightness": "~12.0.1",
-    "expo-camera": "~15.0.12",
+    "expo-camera": "~15.0.14",
     "expo-checkbox": "~3.0.0",
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
     "expo-device": "~6.0.2",
-    "expo-firebase-core": "^6.0.0",
     "expo-firebase-recaptcha": "^2.3.1",
-    "expo-image-picker": "~15.0.6",
+    "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-location": "~17.0.1",
-    "expo-notifications": "~0.28.9",
+    "expo-notifications": "~0.28.10",
     "expo-status-bar": "~1.12.1",
-    "expo-updates": "~0.25.18",
+    "expo-updates": "~0.25.20",
     "expo-web-browser": "~13.0.3",
-    "firebase": "^10.12.2",
+    "firebase": "^10.12.3",
     "i18next": "^23.8.2",
     "moment": "^2.30.1",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^14.0.1",
-    "react-native": "0.74.2",
+    "react-native": "0.74.3",
+    "react-native-actionsheet": "^2.4.2",
+    "react-native-curved-bottom-bar": "^3.2.7",
     "react-native-datepicker": "^1.7.2",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.16.1",
@@ -72,11 +75,12 @@
     "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.0.1",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screen-brightness": "^2.0.0-alpha",
     "react-native-screens": "3.31.1",
     "react-native-stepper-ui": "^0.0.9",
     "react-native-svg": "^15.2.0",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-text-gradient": "^0.1.7",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
@@ -86,6 +90,7 @@
     "@babel/core": "^7.20.0",
     "@types/firebase": "^3.2.1",
     "@types/react": "~18.2.79",
+    "@types/react-native-actionsheet": "^2.4.7",
     "@types/react-native-datepicker": "^1.7.6",
     "@types/react-native-modal-dropdown": "^1.0.5",
     "@types/react-native-vector-icons": "^6.4.18",
