--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@expo-google-fonts/open-sans": "^0.2.3",
+    "@expo/config-plugins": "~8.0.0",
     "@expo/metro-runtime": "~3.2.1",
     "@microsoft/signalr": "^8.0.0",
     "@mui/material": "^5.15.13",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/masked-view": "^0.1.11",
@@ -44,18 +45,16 @@
     "expo-checkbox": "~3.0.0",
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
-    "expo-dev-client": "~4.0.24",
+    "expo-dev-client": "~4.0.25",
     "expo-device": "~6.0.2",
-    "expo-firebase-recaptcha": "^2.3.1",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-location": "~17.0.1",
     "expo-media-library": "^16.0.4",
-    "expo-modules-core": "^1.12.22",
     "expo-notifications": "^0.28.16",
     "expo-status-bar": "~1.12.1",
     "expo-task-manager": "^11.8.2",
-    "expo-updates": "^0.25.23",
+    "expo-updates": "~0.25.24",
     "expo-web-browser": "~13.0.3",
     "firebase": "^10.12.2",
     "i18next": "^23.8.2",
@@ -80,11 +79,11 @@
     "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.0.1",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.5",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screen-brightness": "^2.0.0-alpha",
     "react-native-screens": "3.31.1",
     "react-native-stepper-ui": "^0.0.9",
-    "react-native-svg": "^15.2.0",
+    "react-native-svg": "15.2.0",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-text-gradient": "^0.1.7",
     "react-native-vector-icons": "^10.1.0",
@@ -100,7 +99,7 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/text-to-svg": "^3.1.4",
     "prettier": "3.2.5",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
