--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@emotion/styled": "^11.11.0",
     "@expo-google-fonts/open-sans": "^0.2.3",
     "@expo/config-plugins": "~8.0.0",
-    "@expo/metro-runtime": "~3.2.1",
+    "@expo/metro-runtime": "~3.2.3",
     "@microsoft/signalr": "^8.0.0",
     "@mui/material": "^5.15.13",
     "@react-native-async-storage/async-storage": "1.23.1",
@@ -33,6 +33,7 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "@stripe/stripe-react-native": "0.37.2",
+    "@types/react-native-snap-carousel": "^3.8.11",
     "antd-mobile": "^5.36.1",
     "axios": "^1.6.7",
     "date-fns": "^3.6.0",
@@ -41,19 +42,21 @@
     "expo-auth-session": "~5.5.2",
     "expo-barcode-scanner": "~13.0.1",
     "expo-brightness": "~12.0.1",
-    "expo-camera": "~15.0.13",
+    "expo-camera": "~15.0.15",
     "expo-checkbox": "~3.0.0",
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
     "expo-dev-client": "~4.0.25",
     "expo-device": "~6.0.2",
+    "expo-firebase-recaptcha": "^2.3.1",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-location": "~17.0.1",
-    "expo-media-library": "^16.0.4",
-    "expo-notifications": "^0.28.16",
+    "expo-media-library": "~16.0.4",
+    "expo-notifications": "~0.28.16",
+    "expo-random": "~14.0.1",
     "expo-status-bar": "~1.12.1",
-    "expo-task-manager": "^11.8.2",
+    "expo-task-manager": "~11.8.2",
     "expo-updates": "~0.25.24",
     "expo-web-browser": "~13.0.3",
     "firebase": "^10.12.2",
@@ -63,7 +66,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^14.0.1",
-    "react-native": "^0.74.5",
+    "react-native": "0.74.5",
     "react-native-curved-bottom-bar": "^3.2.7",
     "react-native-datepicker": "^1.7.2",
     "react-native-geolocation-service": "^5.3.1",
@@ -82,16 +85,17 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screen-brightness": "^2.0.0-alpha",
     "react-native-screens": "3.31.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-stepper-ui": "^0.0.9",
     "react-native-svg": "15.2.0",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-text-gradient": "^0.1.7",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-web": "~0.19.6",
+    "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.24.0",
     "@types/firebase": "^3.2.1",
     "@types/react": "~18.2.79",
     "@types/react-native-datepicker": "^1.7.6",
